--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 </head>
 <body>
 
+   Δημιουργία: Παναγιώτης Δόμβρος 2025 (CC BY-NC)
+    </div>
   <h1>Για Επανάληψη</h1>
   <p>Κάνε κλικ σε μια απάντηση. Εάν είναι σωστή, πρασινίζει. Αν είναι λάθος, κοκκινίζει και θα εμφανιστεί και η σωστή.</p>
 
